syntax = "proto3";

message ProtoData {
    string first_name = 1;
    string middle_name = 2;
    string last_name = 3;
    string birth_date = 4;
    uint32 age = 5;
    bool is_adult = 6;
}